--- a/statics/style/style.scss
+++ b/statics/style/style.scss
@@ -11401,6 +11401,16 @@ video {
   z-index: auto;
 }
 
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+
+body{
+  margin:0px;
+}
+
+svg{
+  margin:auto;
+}
+
 @media (min-width: 640px) {
   .sm\:sr-only {
     position: absolute;
