--- a/statics/style/style.src.scss
+++ b/statics/style/style.src.scss
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+
+body{
+    margin:0px;
+}
+
+svg{
+    margin:auto;
+}
