--- a/statics/style/style.scss
+++ b/statics/style/style.scss
@@ -11411,6 +11411,10 @@ svg{
   margin:auto;
 }
 
+.m-auto{
+  margin: auto;
+}
+
 @media (min-width: 640px) {
   .sm\:sr-only {
     position: absolute;
