--- a/statics/style/style.src.scss
+++ b/statics/style/style.src.scss
@@ -61,3 +61,63 @@ svg{
 
 
 .m-auto{margin: auto;}
+.content2Column{
+  display:grid;
+  grid-template-columns: 1fr 1fr;
+}
+.activedTabs{
+  border-bottom:2px solid #FF7D00;
+  background:transparent;
+  color: #3B414B;
+  font-weight:600;
+}
+
+.InputCheckbox {
+  padding-left: 35px;
+  font-size: 14px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+ width:90%;
+}
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #fff;
+  border:1px solid #fff;
+}
+
+.InputCheckbox input:checked ~ .checkmark {
+  background-color: #2196F3;
+}
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+.InputCheckbox input:checked ~ .checkmark:after {
+  display: block;
+}
+.InputCheckbox .checkmark:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+.navigationTop{
+  display:grid;
+  grid-template-columns:30px 3fr 30px;    
+  }
+
+  .input:focus-within {
+    border: 1px solid #63b3ed;
+}
