--- a/statics/style/style.src.scss
+++ b/statics/style/style.src.scss
@@ -2,7 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&display=swap');
+
+* {
+  font-family: Open Sans;
+}
 
 body{
     margin:0px;
