Adding Firebase resources

--- a/statics/style/style.css
+++ b/statics/style/style.css
@@ -11407,6 +11407,34 @@ video {
   font-family: Open Sans;
 }
 
+button[type=reset]  {
+  padding: 0.5rem;
+  background-color: #f56565;
+  border-radius: 0.5rem;
+  color: #fff;
+  margin: 0.5rem;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06)
+}
+
+button[type=submit]  {
+  padding: 0.5rem;
+  background-color: #38b2ac;
+  border-radius: 0.5rem;
+  color: #fff;
+  margin: 0.5rem;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06)
+}
+
+form label {
+  display: block;
+  text-transform: uppercase;
+  letter-spacing: 0.025em;
+  color: #4a5568;
+  font-size: 0.75rem;
+  font-weight: 700;
+  margin-bottom: 0.5rem
+}
+
 body{
   margin:0px;
   color: #3B414B;
