--- a/statics/style/style.src.scss
+++ b/statics/style/style.src.scss
@@ -8,6 +8,18 @@
   font-family: Open Sans;
 }
 
+button[type=reset]  {
+  @apply p-2 bg-red-500 rounded-lg text-white m-2  shadow
+}
+
+button[type=submit]  {
+  @apply p-2 bg-teal-500 rounded-lg text-white m-2  shadow
+}
+
+form label {
+  @apply block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2
+}
+
 body{
     margin:0px;
     color: #3B414B;
