Adding itinerary. Need a lot of improvements

--- a/statics/style/customerapp.src.scss
+++ b/statics/style/customerapp.src.scss
@@ -27,7 +27,7 @@ div[data-component="header-toolbar"] div[data-component="icon"] {
 }
 
 div[data-component="header-toolbar"] div[data-component="icon-selected"] {
-  @apply mx-2  text-blue-500 font-semibold
+  @apply mx-2  text-blue-500 font-thin
 }
 
 
